[package]
name = "wasm_crypto"
version = "0.0.0"
edition = "2018"
repository = "https://github.com/abdfnx/renio_std"
authors = ["abdfnx"]
license = "Apache 2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
blake2 = "0.9.1"
derive_more = "0.99.16"
digest = "0.9.0"
generic-array = "0.14.4"
js-sys = "0.3.51"
md-5 = "0.9.1"
ripemd160 = "0.9.1"
sha-1 = "0.9.7"
sha2 = "0.9.5"
sha3 = "0.9.1"
typenum = "1.13.0"
wasm-bindgen = "0.2.78"

[dependencies.blake3]
version = "1.0.0"
features = ["std", "traits-preview"]
